[tool.poetry]
name = "rl-learning"
version = "0.1.0"
description = "Exercises and demonstractions of concepts learned while studying reinforcement learning."
authors = ["Luis Gustavo <stats.gustavo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
fire = "^0.4.0"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
hypothesis = "^6.39.3"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
